--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+}
+
+body {
+    background-color: ivory;
+}
+
 .carousel img {
     height: 500px;
     opacity: 0.9;
@@ -7,3 +21,140 @@
     padding: 0 !important;
     margin: 0 !important;
 }
+
+#afterCarousel {
+    margin-top: 40px;
+}
+
+.fixed-top {
+    opacity: 0.9;
+    border-bottom: solid 1px rgba(71,91,97,.65) ;
+    background-color:rgba(71,91,97,.65) !important;
+}
+
+.pt-4, .py-4 {
+    background-color:rgba(71,91,97,.65) !important;
+    opacity: 0.7;
+    border-top: solid 1px rgba(71,91,97,.65);
+}
+
+.breadcrumb {
+    background-color:rgba(71,91,97,.65) !important;
+    opacity: 0.7;
+    border-top: solid 1px rgba(71,91,97,.65);
+} 
+
+#userInput {
+    margin-top: 25px;
+}
+
+.btn-primary {
+    color: #fff;
+    background-image: url(../images/border2.jpg);
+    opacity: 0.9;
+    border: solid 1px rgba(33, 84, 100, 0.65)  !important;
+}
+
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    color: #fff;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #fff;
+}
+
+.font-weight-bold {
+    color: #fff;
+}
+
+.deepshadow {
+    color: #e0dfdc;
+   
+    letter-spacing: .1em;
+    text-shadow: 
+      0 -1px 0 #fff, 
+      0 1px 0 #2e2e2e, 
+      0 2px 0 #2c2c2c, 
+      0 3px 0 #2a2a2a, 
+      0 4px 0 #282828, 
+      0 5px 0 #262626, 
+      0 6px 0 #242424, 
+      0 7px 0 #222, 
+      0 8px 0 #202020, 
+      0 9px 0 #1e1e1e, 
+      0 10px 0 #1c1c1c, 
+      0 11px 0 #1a1a1a, 
+      0 12px 0 #181818, 
+      0 13px 0 #161616, 
+      0 14px 0 #141414, 
+      0 15px 0 #121212, 
+      0 22px 30px rgba(0, 0, 0, 0.9);
+  }
+
+  .deepshadowFooter {
+    color: #e0dfdc;
+   
+    letter-spacing: .1em;
+    text-shadow: 
+      0 -1px 0 #fff, 
+      0 1px 0 #2e2e2e, 
+      0 2px 0 #2c2c2c, 
+      0 3px 0 #2a2a2a, 
+      0 4px 0 #282828, 
+      0 5px 0 #262626, 
+      0 6px 0 #242424, 
+      0 7px 0 #222, 
+      0 8px 0 #202020, 
+      0 9px 0 #1e1e1e, 
+      0 0px 0 #1c1c1c, 
+      0 1px 0 #1a1a1a, 
+      0 2px 0 #181818, 
+      0 3px 0 #161616, 
+      0 4px 0 #141414, 
+      0 5px 0 #121212, 
+      0 5px 10px rgba(0, 0, 0, 0.9);
+  }
+
+  #icon {
+      height: 40px;
+      width: 40px;
+  }
+  
+  .table .thead-light th {
+    color: #fff;
+    background-color:rgba(71,91,97,.65) !important;
+    opacity: 0.7;
+}
+
+  .border-secondary {
+    border-color: rgba(71,91,97,.65)!important;
+    opacity: 0.9 !important;
+}
+
+
+.panel-body {
+    padding: 15px;
+}
+
+.panel-primary>.panel-heading {
+    color: #fff;
+    background-image: url(../images/border2.jpg);
+    opacity: 0.7;
+}
+
+.panel-primary {
+    background-color: #fff;
+}
+
+.panel-heading {
+    padding: 2px 10px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
+.table {
+    margin-bottom: 0rem;
+}
+
+
